--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,16 @@
 %table#movies
   %thead
     %tr
-      %th{:class => @title_header}= link_to 'Title', movies_path(:sort => 'title'), :id => 'title_header'
-      %th Rating
-      %th{:class => @release_date_header}= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
-      %th More Info
+  - if @current == 'title'
+    %th{:class => 'hilite'}= link_to 'Title', movies_path(:sort => 'title'), :id => 'hilite'
+  - else
+    %th{:class => @title_header}= link_to 'Title', movies_path(:sort => 'title'), :id => 'title_header'
+  %th Rating
+  - if @current == 'release_date'
+    %th{:class => 'hilite'}= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'hilite'
+  - else
+    %th{:class => @release_date_header}= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
+  %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
